# ROS2-with-Point-Cloud-Library

./: README.md
data/: edited_raw_data_downloader.sh
pcl_test/: CMakeLists.txt  package.xml
pcl_test/launch/: bring_rviz.launch.py  process_kitti.launch.py  process_kitti_2.launch.py  readme.txt  rtab_mapping.launch.py
pcl_test/point_clouds_data/: all_cylinders.pcd  circular_point_cloud.pcd
pcl_test/point_clouds_data/cylinder_clouds/: cylinder_cloud_0.pcd  cylinder_cloud_1.pcd  cylinder_cloud_2.pcd  cylinder_cloud_3.pcd  cylinder_cloud_4.pcd  cylinder_cloud_5.pcd  cylinder_cloud_6.pcd  cylinder_cloud_7.pcd  cylinder_cloud_8.pcd  remaining_cloud_0.pcd  remaining_cloud_1.pcd  remaining_cloud_2.pcd  remaining_cloud_3.pcd  remaining_cloud_4.pcd  remaining_cloud_5.pcd  remaining_cloud_6.pcd  remaining_cloud_7.pcd  remaining_cloud_8.pcd
pcl_test/src/: 0_table_scene.cpp  1_plane_cloud.cpp  2_circular_cloud.cpp  3_filtering_segmentation.cpp  3_filtering_segmentation.txt  4_point_path_drawing.cpp  5_kitti_data_voxel.cpp  6_kd_tree.cpp  7_traffic_segmentation.cpp
